# TaskBoardApp

./: .pylintrc  README.md  docker-compose.yml
.github/workflows/: ci.yml
services/auth_service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 98d10ac41b80_initial_schema.py  d696e8625228_create_users.py
services/auth_service/app/: main.py
services/auth_service/app/core/: config.py  jwt.py  security.py
services/auth_service/app/db/: session.py
services/auth_service/app/messaging/: rabbitmq.py
services/auth_service/app/models/: auth.py
services/auth_service/app/schemas/: auth.py
services/auth_service/app/services/: auth_service.py  events.py
services/auth_service/tests/: conftest.py
services/auth_service/tests/api/: test_auth_api.py
services/auth_service/tests/services/: test_auth_service.py
services/board_service/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/board_service/alembic/: env.py
services/board_service/alembic/versions/: 8375b6f105f1_initial_board_schema.py
services/board_service/app/: main.py  requirements.txt
services/board_service/app/core/: config.py  database.py
services/board_service/app/db/: session.py
services/board_service/app/models/: board.py  column.py  task.py
services/board_service/app/schemas/: board.py  column.py  task.py
services/board_service/app/services/: board_service.py  column_service.py  task_service.py
services/board_service/tests/: conftest.py
services/board_service/tests/api/: test_boards_api.py
services/profile_service/: .env.example  alembic.ini  pyproject.toml
services/profile_service/alembic/: env.py
services/profile_service/app/: main.py
services/profile_service/tests/: conftest.py
(+23 files in other folders)
