[project]
name = "board-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi==0.115.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]>=3.3.2",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.37",
    "uvicorn[standard]==0.34.0",
]
